--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -19,4 +19,9 @@
       <li>{{ driver.username }} ({{ driver.first_name }} {{ driver.last_name }})</li>
     {% endfor %}
   </ul>
+  {% if user not in car.drivers.all %}
+    <a class="btn btn-secondary" href="{% url 'taxi:car-add-driver' car.id user.id %}">Assign me to this car</a>
+  {% else %}
+    <a class="btn btn-secondary" href="{% url 'taxi:car-remove-driver' car.id user.id %}">Delete me from this car</a>
+  {% endif %}
 {% endblock %}
