Add button to delete driver

--- a/templates/taxi/driver_detail.html
+++ b/templates/taxi/driver_detail.html
@@ -23,4 +23,5 @@
       <p>No cars!</p>
     {% endfor %}
   </div>
+  <a class="btn btn-danger" href="{% url 'taxi:driver-delete' driver.id %}">Delete driver</a>
 {% endblock %}
