--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Driver List
+    <h1>Driver List <a href="{% url 'taxi:driver-create' %}">+</a>
     </h1>
 
     {% if driver_list %}
