--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -12,16 +12,17 @@
     </a>
   </h1>
   <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
+  <h1>Drivers
+    {% if user not in car.drivers.all %}
+      <a class="btn btn-success float-right" href="{% url 'taxi:car-add-driver' car.id user.id %}">Assign me to this car</a>
+    {% else %}
+      <a class="btn btn-danger float-right" href="{% url 'taxi:car-remove-driver' car.id user.id %}">Delete me from this car</a>
+    {% endif %}
+  </h1>
   <hr>
   <ul>
     {% for driver in car.drivers.all %}
       <li>{{ driver.username }} ({{ driver.first_name }} {{ driver.last_name }})</li>
     {% endfor %}
   </ul>
-  {% if user not in car.drivers.all %}
-    <a class="btn btn-secondary" href="{% url 'taxi:car-add-driver' car.id user.id %}">Assign me to this car</a>
-  {% else %}
-    <a class="btn btn-secondary" href="{% url 'taxi:car-remove-driver' car.id user.id %}">Delete me from this car</a>
-  {% endif %}
 {% endblock %}
